--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ir_atras">Ir atras</string>
-    <string name="siguiente">Siguiente</string>
+    <string name="go_back">Ir atras</string>
+    <string name="next">Siguiente</string>
     <string name="menu">MENU</string>
     <string name="audio">AUDIO</string>
+    <string name="previous">Anterior</string>
+    <string name="take_picture">Tomar Foto</string>
+    <string name="open_list">Ver Lista</string>
+    <string name="select">Seleccionar</string>
+    <string name="inspect">Inspeccionar</string>
+    <string name="delete">Eliminar</string>
+    <string name="play_audio">Reproducir</string>
+    <string name="open_image">Ver Imagen</string>
+    <string name="open_video">Ver Video</string>
+    <string name="read_qr">Leer QR</string>
+    <string name="result">Resultado: %1$s</string>
+    <string name="correct">Correcto</string>
+    <string name="incorrect">Incorrecto</string>
+    <string name="dictate">Dictar</string>
+    <string name="introduce_number">Introducir</string>
+    <string name="start_recording">Iniciar Grabacion</string>
+    <string name="play_recording">Reproducir Grabacion</string>
+    <string name="stop_recording">Detener Grabacion</string>
+    <string name="record_video">Grabar Video</string>
+    <string name="clear">Limpiar</string>
+    <string name="total_fotos">Total fotos:</string>
+    <string name="total_videos">Total videos:</string>
+    <string name="confirm">Aceptar</string>
+    <string name="cancel">Cancelar</string>
+    <string name="inspect_s">Revisar</string>
+    <string name="is_recording">Deten la grabacion primero</string>
 </resources>
