--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="cancel">Cancel</string>
     <string name="inspect_s">Inspect</string>
     <string name="is_recording">Stop Recording First</string>
+    <string name="nsnc">NSNC</string>
 </resources>
