--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="inspect_s">Inspect</string>
     <string name="is_recording">Stop Recording First</string>
     <string name="nsnc">NSNC</string>
+    <string name="close">Close</string>
+    <string name="confirm_continue">Are you sure you want to continue?</string>
+    <string name="data_incorrect">Introduced data is incorrect</string>
+    <string name="down">down</string>
+    <string name="up">up</string>
 </resources>
