--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -26,14 +26,14 @@
     <string name="clear">Limpiar</string>
     <string name="total_fotos">Total fotos:</string>
     <string name="total_videos">Total videos:</string>
-    <string name="confirm">Aceptar</string>
-    <string name="cancel">Cancelar</string>
+    <string name="confirm">ACEPTAR</string>
+    <string name="cancel">CANCELAR</string>
     <string name="inspect_s">Revisar</string>
     <string name="is_recording">Deten la grabacion primero</string>
-    <string name="nsnc">NSNC</string>
+    <string name="nsnc">Ignorar</string>
     <string name="close">Cerrar</string>
     <string name="confirm_continue">¿Estas seguro de que deseas continuar?</string>
     <string name="data_incorrect">La informacion introducida es incorrecta</string>
-    <string name="down">bajar</string>
-    <string name="up">subir</string>
+    <string name="down">BAJAR</string>
+    <string name="up">SUBIR</string>
 </resources>
