--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name" translatable="false">STS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
-    <string name="go_back">Go back</string>
-    <string name="next">Next</string>
+    <string name="back">BACK</string>
+    <string name="next">NEXT</string>
     <string name="menu">MENU</string>
     <string name="audio">AUDIO</string>
     <string name="previous">Previous</string>
