--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="result">Result: %1$s</string>
     <string name="correct">Correct</string>
     <string name="incorrect">Incorrect</string>
-    <string name="dictate">Dictate</string>
     <string name="introduce_number">Introduce</string>
     <string name="start_recording">Start Recording</string>
     <string name="play_recording">Play Recording</string>
@@ -39,4 +38,6 @@
     <string name="data_incorrect">Introduced data is incorrect</string>
     <string name="down">down</string>
     <string name="up">up</string>
+    <string name="scanner">SCANNER</string>
+    <string name="dictate">DICTATE</string>
 </resources>
