--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">STS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
-    <string name="navigate_back">BACK</string>
+    <string name="navigate_back">GO BACK</string>
     <string name="back">PREVIOUS</string>
     <string name="next">NEXT</string>
     <string name="menu">MENU</string>
